# MNISTique

./: README.md  pyproject.toml
common/: plot_utils.py  utils.py
data/: parse.py
experiments/: config_exp.yaml  config_softmax.yaml  config_twolayer.yaml
models/hardcoded/: __init__.py  _baseNetwork.py  softmax_regression.py  train.py  two_layer_nn.py
optimizer/: _base_optimizer.py  sgd.py
